--- a/ezrael.ini
+++ b/ezrael.ini
@@ -3,6 +3,6 @@ host = chat.freenode.net
 port = 6667
 channel = projectai
 nick = Ezrael
-password = ficken
+password = s3cr37
 
 plugins = Wiki,Fortune
