Updated to python 3 and fixed minor bugs.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -1,8 +1,8 @@
 [main]
 host = chat.freenode.net
 port = 6667
-channel = projectai
+channel = ezrael
 nick = Ezrael
-password = s3cr37
+password = ficken
 
 plugins = Wiki,Fortune
