Fixed some minor bugs and added admin configuration.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -5,4 +5,5 @@ channel = ezrael
 nick = Ezrael
 password = ficken
 
-plugins = Wiki,Fortune,Rejoin,Greeter,EasterEgg
+plugins = Wiki, Fortune, Rejoin, Greeter, EasterEgg
+admins = awilhelm, Avedo
