Enhanced the RollDice plugin.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -1,9 +1,9 @@
 [main]
 host = chat.freenode.net
 port = 6667
-channel = ezrael
+channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Wiki, Fortune, Rejoin, Greeter, EasterEgg, RoleDice
+plugins = Fortune, Rejoin, Greeter, EasterEgg, RoleDice
 admins = awilhelm, Avedo
