Added 42 easteregg to RollDice plugin.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -5,5 +5,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Fortune, Rejoin, Greeter, EasterEgg, RoleDice
+plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice
 admins = awilhelm, Avedo
