--- a/ezrael.ini
+++ b/ezrael.ini
@@ -5,5 +5,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice
+plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow
 admins = awilhelm, Avedo
