+ fixed SSL value check + added sendMessage2Nick function + added voting plugin

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -1,10 +1,10 @@
 [main]
 host = chat.freenode.net
 port = 6667
-ssl = false
+ssl = False
 channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow
+plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting
 admins = awilhelm, Avedo
