added here-am-i plugin

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting
+plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting, HereAmI
 admins = awilhelm, Avedo
