+ added channel-extraction per message + made voting channel-related + here-am-i plugin ignores commands + greeter greets same nick just once per channel (except masters)

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -7,4 +7,4 @@ nick = Ezrael
 password = ficken
 
 plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting, HereAmI
-admins = awilhelm, Avedo
+admins = awilhelm, Avedo, frissdiegurke, fdg
