--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting, HereAmI
+plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting, HereAmI, Datetime
 admins = awilhelm, Avedo, frissdiegurke, fdg
