+ rewrote most of ezrael core + reworked message-parsing + added Message-Object + applied 4 Indent and lower_case standard (mostly) + moved pong into plugin + created record plugin + tidied up parameters given to plugins + beautified stdout output

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Fortune, Rejoin, Greeter, EasterEgg, RollDice, Rainbow, Voting, HereAmI, Datetime
+plugins = Pong, Datetime, Fortune, Greeter, HereAmI, Rainbow, Record, Rejoin, RollDice, Voting
 admins = awilhelm, Avedo, frissdiegurke, fdg
