Implemented basic version of mensa command.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Pong, Datetime, Fortune, Greeter, HereAmI, Rainbow, Record, Rejoin, RollDice, Voting
+plugins = Pong, Datetime, Fortune, Greeter, HereAmI, Rainbow, Record, Rejoin, RollDice, Voting, Mensa
 admins = awilhelm, Avedo, frissdiegurke, fdg
