Fixed issue #5 and updated default config to use ssl.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -1,10 +1,10 @@
 [main]
 host = chat.freenode.net
-port = 6667
-ssl = False
+port = 6697
+ssl = True
 channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Pong, Datetime, Fortune, Greeter, HereAmI, Rainbow, Record, Rejoin, RollDice, Voting, Mensa
+plugins = Pong, Datetime, Rainbow, Record, Rejoin, RollDice, Voting, HereAmI
 admins = awilhelm, Avedo, frissdiegurke, fdg
