Removed join message from greeter plugin and updated default config.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Pong, Datetime, Rainbow, Record, Rejoin, RollDice, Voting, HereAmI
-admins = awilhelm, Avedo, frissdiegurke, fdg
+plugins = Pong, Datetime, Rainbow, Record, Rejoin, RollDice, Voting, HereAmI, Greeter
+admins = awilhelm, Avedo, frissdiegurke, fdg, kfreeman, dinosaurus
