--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Pong, Datetime, Rainbow, Rejoin, RollDice, Voting, HereAmI, Greeter
+plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Mensa
 admins = awilhelm, Avedo, frissdiegurke, fdg, kfreeman, dinosaurus
