Added ifi and removed mensa plugin from config.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -6,5 +6,5 @@ channel = projectai
 nick = Ezrael
 password = ficken
 
-plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Mensa, Topic, Rot13, Base64
+plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Ifi, Topic, Rot13, Base64
 admins = awilhelm, Avedo, frissdiegurke, fdg, kfreeman, dinosaurus
