Basic version of notes plugin!

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -7,5 +7,5 @@ nick = Ezrael
 password = ficken
 
 timezone = Europe/Berlin
-plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Ifi, Topic, Rot13, Base64, LastSeen
+plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Ifi, Topic, Rot13, Base64, LastSeen, Notes
 admins = awilhelm, Avedo, frissdiegurke, fdg, kfreeman, dinosaurus
