Implemented reconnect attempts on connection failture.

--- a/ezrael.ini
+++ b/ezrael.ini
@@ -5,6 +5,8 @@ ssl = True
 channel = projectai
 nick = Ezrael
 password = ficken
+reconnect = True
+reconnect_delay = 30
 
 timezone = Europe/Berlin
 plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Ifi, Topic, Rot13, Base64, LastSeen, Notes
