--- a/ezrael.ini
+++ b/ezrael.ini
@@ -10,4 +10,4 @@ reconnect_delay = 30
 
 timezone = Europe/Berlin
 plugins = Pong, Datetime, Rainbow, Rejoin, Record, RollDice, Voting, HereAmI, Greeter, Ifi, Topic, Rot13, Base64, LastSeen, Notes
-admins = awilhelm, Avedo, frissdiegurke, fdg, kfreeman, dinosaurus
+admins = Phidelux, frissdiegurke, fdg, kfreeman, dinosaurus
